# ChatSystem

./: .gitignore  CMakeLists.txt  Chat.h  ChatRegister.cpp  ChatRegister.h  List.h  Message.h  Node.h  README.md  User.cpp  User.h  UserList.h  main.cpp  test.h
observer/: Observer.h  Subject.h
test/: CMakeLists.txt  ChatFixture.cpp  RegisterFixture.cpp
test/lib/googletest/: CMakeLists.txt
test/lib/googletest/cmake/: internal_utils.cmake
